--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <nav>
       <div class="left-nav">
-        <img src="./logo.png" alt="" />
+        <img src="images/logo.png" alt="" />
         <div>
           <p>Desktop</p>
           <p>Terminal</p>
@@ -55,10 +55,18 @@
         </div>
         <!-- <div class="img-main"> -->
         <div class="img-box">
-          <img src="cli-promo-desktop.png" alt="" />
-          <img src="app-promo-desktop.png" alt="" />
-          <img src="pie-green-tile.svg" alt="" class="two-icons green-icon" />
-          <img src="pie-black-tile.svg" alt="" class="two-icons black-icon" />
+          <img src="images/cli-promo-desktop.png" alt="" />
+          <img src="images/app-promo-desktop.png" alt="" />
+          <img
+            src="images/pie-green-tile.svg"
+            alt=""
+            class="two-icons green-icon"
+          />
+          <img
+            src="images/pie-black-tile.svg"
+            alt=""
+            class="two-icons black-icon"
+          />
         </div>
         <!-- </div> -->
       </div>
@@ -81,8 +89,8 @@
         <div>
           <button type="button" class="white-btn">Read Blog Post</button>
           <div>
-            <img src="man.png" alt="" />
-            <img src="woman.png" alt="" />
+            <img src="images/man.png" alt="" />
+            <img src="images/woman.png" alt="" />
           </div>
         </div>
       </div>
@@ -90,8 +98,8 @@
     <section class="section-3-4">
       <section class="third-section">
         <div class="img-box-2">
-          <img src="app-promo-desktop.png" alt="" />
-          <img src="pie-green-tile.svg" alt="" class="green-icon-2" />
+          <img src="images/app-promo-desktop.png" alt="" />
+          <img src="images/pie-green-tile.svg" alt="" class="green-icon-2" />
         </div>
         <div>
           <label><span>β</span> Public beta</label>
@@ -123,8 +131,8 @@
           <button type="button" class="white-btn">Learn more</button>
         </div>
         <div class="img-box-3">
-          <img src="cli-promo-desktop.png" alt="" />
-          <img src="pie-black-tile.svg" alt="" class="green-icon-3" />
+          <img src="images/cli-promo-desktop.png" alt="" />
+          <img src="images/pie-black-tile.svg" alt="" class="green-icon-3" />
           <div class="blue-review-box review-box">
             <span class="avatar"></span>
             <div>
@@ -221,7 +229,7 @@
       </div>
     </section>
     <section class="seventh-section">
-      <div><img src="community-shape.svg" alt="" /></div>
+      <div><img src="images/community-shape.svg" alt="" /></div>
       <div class="jtc">
         <div class="main-btn-box">
           <h2>Join the community</h2>
@@ -249,7 +257,7 @@
       </div>
     </section>
     <footer>
-      <img src="./logo-no-Bg.png" alt="" />
+      <img src="images/logo-no-Bg.png" alt="" />
       <div class="first">
         <ul>
           <li><b>HTTPie</b></li>
